syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.chatroom";
option java_outer_classname = "ChatroomProto";

package chatroom;

service Chatroom {
  // 进入聊天室
  rpc Enter (Person) returns (EnterResponse) {}
  // 发送消息
  rpc SendMessage (Message) returns (Empty) {}
  // 接收新消息
  rpc ReceiveMessage (Person) returns (stream Message) {}
}

message Person {
  string name = 1;
}

message Message {
  string message = 1;
  Person person = 2;
}

message EnterResponse{
  string message = 1;
}

message Empty{
}
